# pandora-build

./: Makefile.am  README  configure.ac  pandora-tool  pandora_64bit.m4  pandora_canonical.m4  pandora_enable_dtrace.m4  pandora_ensure_gcc_version.m4  pandora_optimize.m4  pandora_warnings.m4
config/: pandora-plugin  pandora_plugin_config.py  register_plugins.py
m4/: pandora_canonical.m4  pandora_drizzle_build.m4  pandora_extensions.m4  pandora_have_libdrizzle.m4  pandora_have_libhaildb.m4  pandora_have_libmemcached.m4  pandora_have_libmysqlclient.m4  pandora_have_libndbclient.m4  pandora_have_sqlite.m4  pandora_platform.m4  pandora_plugins.m4  pandora_stack_direction.m4  pandora_swig.m4  pandora_vc_build.m4  pandora_warnings.m4  pandora_with_gettext.m4  pandora_with_perl.m4  pandora_with_python3.m4  pandora_with_ruby.m4
quickly/templates/drizzle-plugin/: commandsconfig
quickly/templates/pandora-build/: add.py  commandsconfig  create.py  license.py  upgrade.py
quickly/templates/pandora-build-c/project_root_application/: Makefile.am
quickly/templates/pandora-build-c/project_root_library/: Makefile.am
quickly/templates/pandora-build/available_licenses/: header_BSD
quickly/templates/pandora-build/drizzle_plugin/: plugin.ini
quickly/templates/pandora-build/internal/: createoradd.py  licensing.py  naming.py  pandoramacros.py  vc.py
quickly/templates/pandora-build/project_root/: AUTHORS  configure.ac
quickly/templates/pandora-build/project_root/project_name/: project_name.cc  project_name.h
quickly/templates/pandora-build/project_root/project_name/test/: basic.cc
quickly/templates/pandora-build/project_root_application/: Makefile.am
quickly/templates/pandora-build/project_root_library/: Makefile.am
