# pandora-build 
# Copyright (C) 2009 Monty Taylor
# All rights reserved.
#
# Use and distribution licensed under the BSD license.  See
# the COPYING file in this directory for full text.

ACLOCAL_AMFLAGS= -I m4

aclocaldir= $(datadir)/aclocal
aclocal_DATA= \
	m4/ac_cxx_compile_stdcxx_0x.m4 \
	m4/ac_cxx_header_stdcxx_98.m4 \
	m4/pandora_64bit.m4 \
	m4/pandora_canonical.m4 \
	m4/pandora_check_compiler_version.m4 \
	m4/pandora_check_cxx_standard.m4 \
	m4/pandora_enable_dtrace.m4 \
	m4/pandora_ensure_gcc_version.m4 \
	m4/pandora_header_assert.m4 \
	m4/pandora_libtool.m4 \
	m4/pandora_optimize.m4 \
	m4/pandora_shared_ptr.m4 \
	m4/pandora_vc_build.m4 \
	m4/pandora_warnings.m4

EXTRA_DIST= ${aclocal_DATA}
