# pandora-build 
# Copyright (C) 2009 Monty Taylor
# All rights reserved.
#
# Use and distribution licensed under the BSD license.  See
# the COPYING file in this directory for full text.

ACLOCAL_AMFLAGS= -I m4

nobase_pkgdata_DATA= \
	config/autorun.sh \
	config/config.rpath \
	config/pandora-plugin \
	config/pandora-plugin.ini \
	config/uncrustify.cfg \
	m4/gettext.m4 \
	m4/lib-ld.m4 \
	m4/lib-link.m4 \
	m4/lib-prefix.m4


aclocaldir= $(datadir)/aclocal
aclocal_DATA= \
	m4/pandora_64bit.m4 \
	m4/pandora_canonical.m4 \
	m4/pandora_check_compiler_version.m4 \
	m4/pandora_check_cxx_standard.m4 \
	m4/pandora_cinttypes.m4 \
	m4/pandora_clock_gettime.m4 \
	m4/pandora_cstdint.m4 \
	m4/pandora_cxx_demangle.m4 \
	m4/pandora_drizzle_build.m4 \
	m4/pandora_enable_dtrace.m4 \
	m4/pandora_ensure_gcc_version.m4 \
	m4/pandora_extensions.m4 \
	m4/pandora_fdatasync.m4 \
	m4/pandora_have_better_malloc.m4 \
	m4/pandora_have_boost.m4 \
	m4/pandora_have_gcc_atomics.m4 \
	m4/pandora_have_libavahi.m4 \
	m4/pandora_have_libbdb.m4 \
	m4/pandora_have_libboost_options.m4 \
	m4/pandora_have_libcassandra.m4 \
	m4/pandora_have_libdl.m4 \
	m4/pandora_have_libdrizzle.m4 \
	m4/pandora_have_libevent.m4 \
	m4/pandora_have_libgearman.m4 \
	m4/pandora_have_libgtest.m4 \
	m4/pandora_have_libinnodb.m4 \
	m4/pandora_have_libldap.m4 \
	m4/pandora_have_libmemcached.m4 \
	m4/pandora_have_libmysqlclient.m4 \
	m4/pandora_have_libndbclient.m4 \
	m4/pandora_have_libpcre.m4 \
	m4/pandora_have_libpq.m4 \
	m4/pandora_have_libreadline.m4 \
	m4/pandora_have_libsqlite3.m4 \
	m4/pandora_have_libtokyocabinet.m4 \
	m4/pandora_have_libuuid.m4 \
	m4/pandora_have_libxml2.m4 \
	m4/pandora_have_libz.m4 \
	m4/pandora_have_protobuf.m4 \
	m4/pandora_have_sasl.m4 \
	m4/pandora_have_thrift.m4 \
	m4/pandora_header_assert.m4 \
	m4/pandora_libtool.m4 \
	m4/pandora_optimize.m4 \
	m4/pandora_platform.m4 \
	m4/pandora_plugins.m4 \
	m4/pandora_print_callstack.m4 \
	m4/pandora_pthread.m4 \
	m4/pandora_python3_devel.m4 \
	m4/pandora_run_cpplint.m4 \
	m4/pandora_sasl.m4 \
	m4/pandora_shared_ptr.m4 \
	m4/pandora_stl_hash.m4 \
	m4/pandora_swig.m4 \
	m4/pandora_use_pipe.m4 \
	m4/pandora_vc_build.m4 \
	m4/pandora_version.m4 \
	m4/pandora_visibility.m4 \
	m4/pandora_warnings.m4 \
	m4/pandora_with_gettext.m4 \
	m4/pandora_with_lua.m4 \
	m4/pandora_with_memcached.m4 \
	m4/pandora_with_perl.m4 \
	m4/pandora_with_php.m4 \
	m4/pandora_with_python.m4 \
	m4/pandora_with_python3.m4 \
	m4/pandora_with_r.m4 \
	m4/pandora_with_ruby.m4


EXTRA_DIST= ${aclocal_DATA} ${nobase_pkgdata_DATA}
