# pandora-build 
# Copyright (C) 2009 Monty Taylor
# All rights reserved.
#
# Use and distribution licensed under the BSD license.  See
# the COPYING file in this directory for full text.

ACLOCAL_AMFLAGS= -I m4

nobase_pkgdata_DATA= \
	config/autorun.sh \
	config/config.rpath \
	config/pandora-plugin \
	config/pandora-plugin.ini \
	config/uncrustify.cfg \
	m4/lib-ld.m4 \
	m4/lib-link.m4 \
	m4/lib-prefix.m4


aclocaldir= $(datadir)/aclocal
aclocal_DATA= \
	m4/pandora_64bit.m4 \
	m4/pandora_canonical.m4 \
	m4/pandora_check_compiler_version.m4 \
	m4/pandora_check_cxx_standard.m4 \
	m4/pandora_cinttypes.m4 \
	m4/pandora_clock_gettime.m4 \
	m4/pandora_cstdint.m4 \
	m4/pandora_cxx_demangle.m4 \
	m4/pandora_drizzle_build.m4 \
	m4/pandora_enable_dtrace.m4 \
	m4/pandora_ensure_gcc_version.m4 \
	m4/pandora_extensions.m4 \
	m4/pandora_fdatasync.m4 \
	m4/pandora_have_better_malloc.m4 \
	m4/pandora_have_boost.m4 \
	m4/pandora_have_gcc_atomics.m4 \
	m4/pandora_have_libavahi.m4 \
	m4/pandora_have_libbdb.m4 \
	m4/pandora_have_libboost_options.m4 \
	m4/pandora_have_libboost_thread.m4 \
	m4/pandora_have_libcassandra.m4 \
	m4/pandora_have_libcurl.m4 \
	m4/pandora_have_libdl.m4 \
	m4/pandora_have_libdrizzle.m4 \
	m4/pandora_have_libevent.m4 \
	m4/pandora_have_libgearman.m4 \
	m4/pandora_have_libgtest.m4 \
	m4/pandora_have_libhashkit.m4 \
	m4/pandora_have_libinnodb.m4 \
	m4/pandora_have_libldap.m4 \
	m4/pandora_have_libmemcached.m4 \
	m4/pandora_have_libmysqlclient.m4 \
	m4/pandora_have_libndbclient.m4 \
	m4/pandora_have_libpcre.m4 \
	m4/pandora_have_libpq.m4 \
	m4/pandora_have_libpqxx.m4 \
	m4/pandora_have_libreadline.m4 \
	m4/pandora_have_libsqlite3.m4 \
	m4/pandora_have_libtokyocabinet.m4 \
	m4/pandora_have_libuuid.m4 \
	m4/pandora_have_libvbucket.m4 \
	m4/pandora_have_libxml2.m4 \
	m4/pandora_have_libz.m4 \
	m4/pandora_have_protobuf.m4 \
	m4/pandora_have_sasl.m4 \
	m4/pandora_have_thrift.m4 \
	m4/pandora_header_assert.m4 \
	m4/pandora_intltool.m4 \
	m4/pandora_libtool.m4 \
	m4/pandora_optimize.m4 \
	m4/pandora_platform.m4 \
	m4/pandora_plugins.m4 \
	m4/pandora_print_callstack.m4 \
	m4/pandora_pthread.m4 \
	m4/pandora_python3_devel.m4 \
	m4/pandora_run_cpplint.m4 \
	m4/pandora_sasl.m4 \
	m4/pandora_shared_ptr.m4 \
	m4/pandora_stl_hash.m4 \
	m4/pandora_swig.m4 \
	m4/pandora_use_pipe.m4 \
	m4/pandora_vc_build.m4 \
	m4/pandora_version.m4 \
	m4/pandora_visibility.m4 \
	m4/pandora_warnings.m4 \
	m4/pandora_with_lua.m4 \
	m4/pandora_with_memcached.m4 \
	m4/pandora_with_perl.m4 \
	m4/pandora_with_php.m4 \
	m4/pandora_with_python.m4 \
	m4/pandora_with_python3.m4 \
	m4/pandora_with_r.m4 \
	m4/pandora_with_ruby.m4

nobase_data_DATA= \
		  quickly/templates/pandora-build-c/commandsconfig \
		  quickly/templates/pandora-build-c/project_root/AUTHORS \
		  quickly/templates/pandora-build-c/project_root/config/pandora-plugin.ini \
		  quickly/templates/pandora-build-c/project_root/configure.ac \
		  quickly/templates/pandora-build-c/project_root/docs/Doxyfile \
		  quickly/templates/pandora-build-c/project_root/docs/header.html.in \
		  quickly/templates/pandora-build-c/project_root/project_name/project_name.c \
		  quickly/templates/pandora-build-c/project_root/project_name/project_name.h \
		  quickly/templates/pandora-build-c/project_root/project_name/test/basic.c \
		  quickly/templates/pandora-build-c/project_root/project_name/visibility.h \
		  quickly/templates/pandora-build-c/project_root/test_run.sh \
		  quickly/templates/pandora-build-c/project_root/valgrind.suppressions \
		  quickly/templates/pandora-build-c/project_root_application/Makefile.am \
		  quickly/templates/pandora-build/add.py \
		  quickly/templates/pandora-build/commandsconfig \
		  quickly/templates/pandora-build/create.py \
		  quickly/templates/pandora-build/drizzle_plugin/AUTHORS \
		  quickly/templates/pandora-build/drizzle_plugin/module.cc \
		  quickly/templates/pandora-build/drizzle_plugin/plugin.ini \
		  quickly/templates/pandora-build/drizzle_plugin/project_name.cc \
		  quickly/templates/pandora-build/drizzle_plugin/project_name.h \
		  quickly/templates/pandora-build/drizzle_plugin/tests/r/basic.result \
		  quickly/templates/pandora-build/drizzle_plugin/tests/t/basic.test \
		  quickly/templates/pandora-build/drizzle_plugin/tests/t/master.opt \
		  quickly/templates/pandora-build/internal/__init__.py \
		  quickly/templates/pandora-build/internal/apportutils.py \
		  quickly/templates/pandora-build/internal/available_licenses/header_Apache-2.0 \
		  quickly/templates/pandora-build/internal/available_licenses/header_BSD \
		  quickly/templates/pandora-build/internal/available_licenses/header_GPL-2 \
		  quickly/templates/pandora-build/internal/available_licenses/header_GPL-3 \
		  quickly/templates/pandora-build/internal/available_licenses/header_LGPL-2 \
		  quickly/templates/pandora-build/internal/available_licenses/header_LGPL-3 \
		  quickly/templates/pandora-build/internal/available_licenses/header_MIT \
		  quickly/templates/pandora-build/internal/bzrutils.py \
		  quickly/templates/pandora-build/internal/createoradd.py \
		  quickly/templates/pandora-build/internal/launchpad_helper.py \
		  quickly/templates/pandora-build/internal/licensing.py \
		  quickly/templates/pandora-build/internal/naming.py \
		  quickly/templates/pandora-build/internal/packaging.py \
		  quickly/templates/pandora-build/internal/pandoramacros.py \
		  quickly/templates/pandora-build/internal/quicklyutils.py \
		  quickly/templates/pandora-build/license.py \
		  quickly/templates/pandora-build/project_root/AUTHORS \
		  quickly/templates/pandora-build/project_root/config/pandora-plugin.ini \
		  quickly/templates/pandora-build/project_root/configure.ac \
		  quickly/templates/pandora-build/project_root/docs/Doxyfile \
		  quickly/templates/pandora-build/project_root/docs/header.html.in \
		  quickly/templates/pandora-build/project_root/project_name/class_name.cc \
		  quickly/templates/pandora-build/project_root/project_name/class_name.h \
		  quickly/templates/pandora-build/project_root/project_name/test/basic.cc \
		  quickly/templates/pandora-build/project_root/project_name/visibility.h \
		  quickly/templates/pandora-build/project_root/test_run.sh \
		  quickly/templates/pandora-build/project_root/valgrind.suppressions \
		  quickly/templates/pandora-build/project_root_application/Makefile.am \
		  quickly/templates/pandora-build/project_root_application/bin/project_name.cc \
		  quickly/templates/pandora-build/project_root_library/Makefile.am \
		  quickly/templates/pandora-build/run.py \
		  quickly/templates/pandora-build/tutorial.py \
		  quickly/templates/pandora-build/upgrade.py \
		  quickly/templates/pandora-build-c/project_root_application/bin/project_name.c \
		  quickly/templates/pandora-build-c/project_root_library/Makefile.am

install-data-hook:
	-chmod ugo+x $(DESTDIR)$(datadir)/quickly/templates/pandora-build/*py

EXTRA_DIST= ${aclocal_DATA} ${nobase_pkgdata_DATA} ${nobase_data_DATA}
