# pandora-build 
# Copyright (C) 2009 Monty Taylor
# All rights reserved.
#
# Use and distribution licensed under the BSD license.  See
# the COPYING file in this directory for full text.

AC_INIT([pandora-build],PANDORA_CANONICAL_VERSION, [http://launchpad.net/pandora-build])
AC_CONFIG_SRCDIR([m4/pandora_canonical.m4])
AC_CONFIG_AUX_DIR(config)

PANDORA_CANONICAL_TARGET

AC_CONFIG_FILES(Makefile)

AC_OUTPUT
